--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block bodyClass %}hold-transition login-page{% endblock %}
+
 {% block main %}
     <div class="login-box">
         <div class="login-logo">
