--- a/templates/_partials/sidebar.html.twig
+++ b/templates/_partials/sidebar.html.twig
@@ -19,6 +19,14 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="{{ path('app_user_index') }}" class="nav-link {% if app.request.attributes.get('_route') matches '~^app_user_~' %}active{% endif %}">
+                        <i class="nav-icon fa fa-users"></i>
+                        <p>
+                            Users
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="{{ path('app_security_logout') }}" class="nav-link">
                         <i class="nav-icon fa fa-sign-out"></i>
                         <p>
