--- a/templates/vat-rate/form.html.twig
+++ b/templates/vat-rate/form.html.twig
@@ -12,13 +12,8 @@
                     <h4 class="card-title">{{ title }}</h4>
                 </div>
                 <div class="card-body">
-                    {{ form_row(form.company) }}
                     {{ form_row(form.name) }}
-                    {{ form_row(form.additionalName) }}
-                    {{ form_row(form.street) }}
-                    {{ form_row(form.zip) }}
-                    {{ form_row(form.city) }}
-                    {{ form_row(form.country) }}
+                    {{ form_row(form.rate) }}
                     {{ form_row(form.submit) }}
                 </div>
             </div>
