invoice generation, missing fields

--- a/templates/company/form.html.twig
+++ b/templates/company/form.html.twig
@@ -35,6 +35,7 @@
                     {{ form_row(form.taxNumber) }}
                     {{ form_row(form.districtCourt) }}
                     {{ form_row(form.companyRegisterId) }}
+                    {{ form_row(form.titleOfManagingDirector) }}
                     {{ form_row(form.managingDirector) }}
                     {{ form_row(form.bankName) }}
                     {{ form_row(form.bankIban) }}
