--- a/templates/customer/form.html.twig
+++ b/templates/customer/form.html.twig
@@ -13,8 +13,12 @@
                 </div>
                 <div class="card-body">
                     {{ form_row(form.company) }}
+                    {{ form_row(form.customerNumber) }}
                     {{ form_row(form.name) }}
                     {{ form_row(form.additionalName) }}
+                    {{ form_row(form.salutation) }}
+                    {{ form_row(form.firstName) }}
+                    {{ form_row(form.lastName) }}
                     {{ form_row(form.street) }}
                     {{ form_row(form.zip) }}
                     {{ form_row(form.city) }}
