allow fractional amounts

--- a/templates/invoice/form.html.twig
+++ b/templates/invoice/form.html.twig
@@ -116,10 +116,10 @@
                         </tr>
                         <tr>
                             <td colspan="6" class="text-right">
-                                Total:
+                                <strong>Total:</strong>
                             </td>
                             <td colspan="3" class="text-right">
-                                <span class="total-gross"></span>
+                                <strong><span class="total-gross"></span></strong>
                             </td>
                         </tr>
                         </tfoot>
