--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block pageTitle %}Dashboard{% endblock %}
+{% block pageTitle %}{% trans %}Dashboard{% endtrans %}{% endblock %}
 
 {% block body %}
     <section class="content">
