--- a/templates/invoice/set-paid.html.twig
+++ b/templates/invoice/set-paid.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block pageTitle %}Set Invoice Paid{% endblock %}
+{% block pageTitle %}{% trans %}Set Invoice Paid{% endtrans %}{% endblock %}
 
 {% block body %}
 <section class="content">
