--- a/templates/_partials/sidebar.html.twig
+++ b/templates/_partials/sidebar.html.twig
@@ -6,7 +6,7 @@
                     <a href="{{ path('app_dashboard_index') }}" class="nav-link {% if app.request.attributes.get('_route') matches '~^app_dashboard_~' %}active{% endif %}">
                         <i class="nav-icon fa fa-dashboard"></i>
                         <p>
-                            Dashboard
+                            {% trans %}Dashboard{% endtrans %}
                         </p>
                     </a>
                 </li>
@@ -14,7 +14,7 @@
                     <a href="{{ path('app_invoice_index') }}" class="nav-link {% if app.request.attributes.get('_route') matches '~^app_invoice_~' %}active{% endif %}">
                         <i class="nav-icon fa fa-envelope"></i>
                         <p>
-                            Invoices
+                            {% trans %}Invoices{% endtrans %}
                         </p>
                     </a>
                 </li>
@@ -22,7 +22,7 @@
                     <a href="{{ path('app_customer_index') }}" class="nav-link {% if app.request.attributes.get('_route') matches '~^app_customer_~' %}active{% endif %}">
                         <i class="nav-icon fa fa-address-book"></i>
                         <p>
-                            Customers
+                            {% trans %}Customers{% endtrans %}
                         </p>
                     </a>
                 </li>
@@ -30,7 +30,7 @@
                     <a href="{{ path('app_unit_index') }}" class="nav-link {% if app.request.attributes.get('_route') matches '~^app_unit_~' %}active{% endif %}">
                         <i class="nav-icon fa fa-balance-scale"></i>
                         <p>
-                            Units
+                            {% trans %}Units{% endtrans %}
                         </p>
                     </a>
                 </li>
@@ -38,7 +38,7 @@
                     <a href="{{ path('app_vatrate_index') }}" class="nav-link {% if app.request.attributes.get('_route') matches '~^app_vatrate_~' %}active{% endif %}">
                         <i class="nav-icon fa fa-money"></i>
                         <p>
-                            VAT Rates
+                            {% trans %}VAT Rates{% endtrans %}
                         </p>
                     </a>
                 </li>
@@ -46,7 +46,7 @@
                     <a href="{{ path('app_company_index') }}" class="nav-link {% if app.request.attributes.get('_route') matches '~^app_company_~' %}active{% endif %}">
                         <i class="nav-icon fa fa-briefcase"></i>
                         <p>
-                            Companies
+                            {% trans %}Companies{% endtrans %}
                         </p>
                     </a>
                 </li>
@@ -54,7 +54,7 @@
                     <a href="{{ path('app_user_index') }}" class="nav-link {% if app.request.attributes.get('_route') matches '~^app_user_~' %}active{% endif %}">
                         <i class="nav-icon fa fa-users"></i>
                         <p>
-                            Users
+                            {% trans %}Users{% endtrans %}
                         </p>
                     </a>
                 </li>
@@ -62,7 +62,7 @@
                     <a href="{{ path('app_security_logout') }}" class="nav-link">
                         <i class="nav-icon fa fa-sign-out"></i>
                         <p>
-                            Logout
+                            {% trans %}Logout{% endtrans %}
                         </p>
                     </a>
                 </li>
