--- a/templates/customer/form.html.twig
+++ b/templates/customer/form.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block pageTitle %}{{ title }}{% endblock %}
+{% block pageTitle %}{{ title|trans }}{% endblock %}
 
 {% block body %}
 <section class="content">
@@ -9,7 +9,7 @@
         <div class="col-12 col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title">{{ title }}</h4>
+                    <h4 class="card-title">{{ title|trans }}</h4>
                 </div>
                 <div class="card-body">
                     {{ form_row(form.company) }}
