--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block pageTitle %}Manage Users{% endblock %}
+{% block pageTitle %}{% trans %}Manage Users{% endtrans %}{% endblock %}
 
 {% block body %}
 <section class="content">
@@ -8,32 +8,32 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-header">
-                    <h3 class="card-title">Manage Users</h3>
+                    <h3 class="card-title">{% trans %}Manage Users{% endtrans %}</h3>
                 </div>
                 <div class="card-body">
                     <div class="container-fluid mb-3">
                         <div class="text-right">
-                            <a href="{{ path('app_user_add') }}" class="btn btn-primary">Add User</a>
+                            <a href="{{ path('app_user_add') }}" class="btn btn-primary">{% trans %}Add User{% endtrans %}</a>
                         </div>
                     </div>
 
                     <table class="table table-sm table-bordered table-striped table-hover user--index--table-users">
                         <thead>
                         <tr>
-                            <th>ID</th>
-                            <th>Email</th>
-                            <th>Name</th>
-                            <th>Actions</th>
+                            <th>{% trans %}ID{% endtrans %}</th>
+                            <th>{% trans %}Email{% endtrans %}</th>
+                            <th>{% trans %}Name{% endtrans %}</th>
+                            <th>{% trans %}Actions{% endtrans %}</th>
                         </tr>
                         </thead>
                         <tbody>
                         </tbody>
                         <tfoot>
                         <tr>
-                            <th>ID</th>
-                            <th>Email</th>
-                            <th>Name</th>
-                            <th>Actions</th>
+                            <th>{% trans %}ID{% endtrans %}</th>
+                            <th>{% trans %}Email{% endtrans %}</th>
+                            <th>{% trans %}Name{% endtrans %}</th>
+                            <th>{% trans %}Actions{% endtrans %}</th>
                         </tr>
                         </tfoot>
                     </table>
