add company additional name

--- a/templates/company/form.html.twig
+++ b/templates/company/form.html.twig
@@ -13,6 +13,7 @@
                 </div>
                 <div class="card-body">
                     {{ form_row(form.name) }}
+                    {{ form_row(form.additionalName) }}
                     {{ form_row(form.street) }}
                     {{ form_row(form.zip) }}
                     {{ form_row(form.city) }}
