--- a/templates/_partials/translations.html.twig
+++ b/templates/_partials/translations.html.twig
@@ -3,5 +3,7 @@
         'no': '{% trans %}no{% endtrans %}',
         'Net': '{% trans %}Net{% endtrans %}',
         'Gross': '{% trans %}Gross{% endtrans %}',
+        'Budget': '{% trans %}Budget{% endtrans %}',
+        'Price per Hour': '{% trans %}Price per Hour{% endtrans %}',
     };
 </script>
