--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -13,7 +13,7 @@
                 <div class="card-body">
                     <div class="container-fluid mb-3">
                         <div class="text-right">
-                            <a href="{{ path('app_project_add') }}" class="btn btn-primary">{% trans %}New Project{% endtrans %}</a>
+                            <a href="{{ path('app_project_add') }}" class="btn btn-primary">{% trans %}Add Project{% endtrans %}</a>
                         </div>
                     </div>
 
