--- a/templates/time-tracking/index.html.twig
+++ b/templates/time-tracking/index.html.twig
@@ -31,6 +31,7 @@
                             <th>{% trans %}Moment{% endtrans %}</th>
                             <th>{% trans %}Description{% endtrans %}</th>
                             <th>{% trans %}Duration{% endtrans %}</th>
+                            <th>{% trans %}Chargeable{% endtrans %}</th>
                             <th>{% trans %}Actions{% endtrans %}</th>
                         </tr>
                         </thead>
@@ -42,6 +43,7 @@
                             <td>{{ item.moment|date('d.m.Y H:i') }}</td>
                             <td>{{ item.description }}</td>
                             <td>{{ item.duration|number_format }}</td>
+                            <td>{{ (item.chargeable) ? 'yes'|trans : 'no'|trans }}</td>
                             <td>
                                 <div class="btn-group">
                                     <a href="{{ path('app_timetracking_edit', {id: item.id}) }}" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i></a>
@@ -58,6 +60,7 @@
                             <th>{% trans %}Moment{% endtrans %}</th>
                             <th>{% trans %}Description{% endtrans %}</th>
                             <th>{% trans %}Duration{% endtrans %}</th>
+                            <th>{% trans %}Chargeable{% endtrans %}</th>
                             <th>{% trans %}Actions{% endtrans %}</th>
                         </tr>
                         </tfoot>
