show project progress

--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -24,6 +24,7 @@
                             <th>{% trans %}Name{% endtrans %}</th>
                             <th>{% trans %}Customer / Company{% endtrans %}</th>
                             <th>{% trans %}Budget{% endtrans %}</th>
+                            <th>{% trans %}Progress{% endtrans %}</th>
                             <th>{% trans %}Actions{% endtrans %}</th>
                         </tr>
                         </thead>
@@ -35,6 +36,7 @@
                             <th>{% trans %}Name{% endtrans %}</th>
                             <th>{% trans %}Customer / Company{% endtrans %}</th>
                             <th>{% trans %}Budget{% endtrans %}</th>
+                            <th>{% trans %}Progress{% endtrans %}</th>
                             <th>{% trans %}Actions{% endtrans %}</th>
                         </tr>
                         </tfoot>
