--- a/templates/_partials/translations.html.twig
+++ b/templates/_partials/translations.html.twig
@@ -5,5 +5,6 @@
         'Gross': '{% trans %}Gross{% endtrans %}',
         'Budget': '{% trans %}Budget{% endtrans %}',
         'Price per Hour': '{% trans %}Price per Hour{% endtrans %}',
+        'Hours spent': '{% trans %}Hours spent{% endtrans %}',
     };
 </script>
