fix company --> customer

--- a/templates/time-tracking/index.html.twig
+++ b/templates/time-tracking/index.html.twig
@@ -41,7 +41,7 @@
                             <td>{{ item.id }}</td>
                             <td>
                                 {{ item.project.name }}<br>
-                                <small>{{ item.project.company.name }}</small>
+                                <small>{{ item.project.customer.name }}</small>
                             </td>
                             <td>{{ item.moment|date('d.m.Y H:i') }}</td>
                             <td>{{ item.description }}</td>
