--- a/templates/_partials/translations.html.twig
+++ b/templates/_partials/translations.html.twig
@@ -6,5 +6,6 @@
         'Budget': '{% trans %}Budget{% endtrans %}',
         'Price per Hour': '{% trans %}Price per Hour{% endtrans %}',
         'Hours spent': '{% trans %}Hours spent{% endtrans %}',
+        'Are you sure you want to delete this item?': '{% trans %}Are you sure you want to delete this item?{% endtrans %}',
     };
 </script>
