--- a/templates/time-tracking/index.html.twig
+++ b/templates/time-tracking/index.html.twig
@@ -50,7 +50,9 @@
                             <td>
                                 <div class="btn-group">
                                     <a href="{{ path('app_timetracking_edit', {id: item.id}) }}" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i></a>
-                                    <a href="{{ path('app_timetracking_delete', {id: item.id}) }}" class="btn btn-danger btn-sm"><i class="fa fa-remove"></i></a>
+                                    <a href="{{ path('app_timetracking_delete', {id: item.id}) }}" class="btn btn-danger btn-sm btn-delete">
+                                        <i class="fa fa-remove"></i>
+                                    </a>
                                 </div>
                             </td>
                         </tr>
