--- a/templates/time-tracking/index.html.twig
+++ b/templates/time-tracking/index.html.twig
@@ -11,16 +11,19 @@
                     <h3 class="card-title">{% trans %}Time Tracking{% endtrans %}</h3>
                 </div>
                 <div class="card-body">
-                    <div class="container-fluid mb-3">
-                        <div class="text-right">
-                            <a href="{{ path('app_timetracking_add') }}" class="btn btn-primary">{% trans %}Add Time Track Item{% endtrans %}</a>
+                    <div class="row mb-2">
+                        <div class="col-6">
+                            <div class="filter-form">
+                                {{ form_start(filterForm) }}
+                                    {{ form_widget(filterForm.date) }}
+                                {{ form_end(filterForm) }}
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="filter-form">
-                        {{ form_start(filterForm) }}
-                            {{ form_row(filterForm.date) }}
-                        {{ form_end(filterForm) }}
+                        <div class="col-6">
+                            <div class="text-right">
+                                <a href="{{ path('app_timetracking_add') }}" class="btn btn-primary">{% trans %}Add Time Track Item{% endtrans %}</a>
+                            </div>
+                        </div>
                     </div>
 
                     <table class="table table-sm table-bordered table-striped table-hover">
