--- a/templates/time-tracking/form.html.twig
+++ b/templates/time-tracking/form.html.twig
@@ -13,6 +13,7 @@
                 </div>
                 <div class="card-body">
                     {{ form_row(form.project) }}
+                    {{ form_row(form.person) }}
                     {{ form_row(form.moment) }}
                     {{ form_row(form.duration) }}
                     {{ form_row(form.description) }}
