--- a/templates/_partials/footer.html.twig
+++ b/templates/_partials/footer.html.twig
@@ -1,6 +1,6 @@
 <footer class="main-footer">
     <strong>accownting</strong>
     <div class="float-right d-none d-sm-inline-block">
-        <b>{% trans %}Version{% endtrans %}</b> 1.0.0-alpha
+        <b>{% trans %}Version{% endtrans %}</b> 1.0
     </div>
 </footer>
