show total time

--- a/templates/time-tracking/index.html.twig
+++ b/templates/time-tracking/index.html.twig
@@ -32,7 +32,7 @@
                             <th>{% trans %}Project{% endtrans %}</th>
                             <th>{% trans %}Moment{% endtrans %}</th>
                             <th>{% trans %}Description{% endtrans %}</th>
-                            <th>{% trans %}Duration{% endtrans %}</th>
+                            <th class="text-right">{% trans %}Duration{% endtrans %} {% trans %}Shortcode Total{% endtrans %}{{ totalTime|number_format }} {% trans %}Shortcode Chargeable{% endtrans %}{{ totalTimeChargeable|number_format }}</th>
                             <th>{% trans %}Person{% endtrans %}</th>
                             <th>{% trans %}Actions{% endtrans %}</th>
                         </tr>
@@ -72,7 +72,7 @@
                             <th>{% trans %}Project{% endtrans %}</th>
                             <th>{% trans %}Moment{% endtrans %}</th>
                             <th>{% trans %}Description{% endtrans %}</th>
-                            <th>{% trans %}Duration{% endtrans %}</th>
+                            <th class="text-right">{% trans %}Duration{% endtrans %} {% trans %}Shortcode Total{% endtrans %}{{ totalTime|number_format }} {% trans %}Shortcode Chargeable{% endtrans %}{{ totalTimeChargeable|number_format }}</th>
                             <th>{% trans %}Person{% endtrans %}</th>
                             <th>{% trans %}Actions{% endtrans %}</th>
                         </tr>
