add additional name to invoice pdf sender line

--- a/templates/pdf/invoice.de.html.twig
+++ b/templates/pdf/invoice.de.html.twig
@@ -79,7 +79,7 @@
                     <table>
                         <tr>
                             <td width="55%">
-                                <p class="text-muted text-smaller">{{ invoice.company.name }} - {{ invoice.company.street }} - {{ invoice.company.zip }} {{ invoice.company.city }}</p>
+                                <p class="text-muted text-smaller">{{ invoice.company.name }}{% if invoice.company.additionalName %} - {{ invoice.company.additionalName }}{% endif %} - {{ invoice.company.street }} - {{ invoice.company.zip }} {{ invoice.company.city }}</p>
                                 <br />
                                 <br />
                                 <p>
