--- a/templates/_partials/sidebar.html.twig
+++ b/templates/_partials/sidebar.html.twig
@@ -19,6 +19,14 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="{{ path('app_offer_index') }}" class="nav-link {% if app.request.attributes.get('_route') matches '~^app_offer_~' %}active{% endif %}">
+                        <i class="nav-icon fa fa-send"></i>
+                        <p>
+                            {% trans %}Offers{% endtrans %}
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="{{ path('app_invoice_index') }}" class="nav-link {% if app.request.attributes.get('_route') matches '~^app_invoice_~' %}active{% endif %}">
                         <i class="nav-icon fa fa-envelope"></i>
                         <p>
