--- a/templates/invoice/form.html.twig
+++ b/templates/invoice/form.html.twig
@@ -50,17 +50,17 @@
                         </tr>
                         </thead>
                         <tbody>
-                        {% for lineItem in form.lineItems %}
+                        {% for item in form.items %}
                         <tr class="line-item">
                             <td>{{ loop.index }}</td>
                             <td>
-                                {{ form_row(lineItem.title) }}
-                                {{ form_row(lineItem.description) }}
+                                {{ form_row(item.title) }}
+                                {{ form_row(item.description) }}
                             </td>
-                            <td>{{ form_row(lineItem.amount, {'attr': {'class': 'line-item--amount'}}) }}</td>
-                            <td>{{ form_row(lineItem.unit) }}</td>
-                            <td>{{ form_row(lineItem.priceSingle, {'attr': {'class': 'line-item--price-single'}}) }}</td>
-                            <td>{{ form_row(lineItem.vatRate, {'attr': {'class': 'line-item--vat-rate'}}) }}</td>
+                            <td>{{ form_row(item.amount, {'attr': {'class': 'line-item--amount'}}) }}</td>
+                            <td>{{ form_row(item.unit) }}</td>
+                            <td>{{ form_row(item.priceSingle, {'attr': {'class': 'line-item--price-single'}}) }}</td>
+                            <td>{{ form_row(item.vatRate, {'attr': {'class': 'line-item--vat-rate'}}) }}</td>
                             <td class="text-right">
                                 <small>({% trans %}Net{% endtrans %})</small> <span class="line-item--total-net-price"></span><br>
                                 <small>({% trans %}Gross{% endtrans %})</small> <span class="line-item--total-gross-price"></span>
@@ -75,13 +75,13 @@
                         <tr class="prototype line-item d-none">
                             <td class="line-item--index"></td>
                             <td>
-                                {{ form_row(form.lineItems.vars.prototype.title) }}
-                                {{ form_row(form.lineItems.vars.prototype.description) }}
+                                {{ form_row(form.items.vars.prototype.title) }}
+                                {{ form_row(form.items.vars.prototype.description) }}
                             </td>
-                            <td>{{ form_row(form.lineItems.vars.prototype.amount, {'attr': {'class': 'line-item--amount'}}) }}</td>
-                            <td>{{ form_row(form.lineItems.vars.prototype.unit) }}</td>
-                            <td>{{ form_row(form.lineItems.vars.prototype.priceSingle, {'attr': {'class': 'line-item--price-single'}}) }}</td>
-                            <td>{{ form_row(form.lineItems.vars.prototype.vatRate, {'attr': {'class': 'line-item--vat-rate'}}) }}</td>
+                            <td>{{ form_row(form.items.vars.prototype.amount, {'attr': {'class': 'line-item--amount'}}) }}</td>
+                            <td>{{ form_row(form.items.vars.prototype.unit) }}</td>
+                            <td>{{ form_row(form.items.vars.prototype.priceSingle, {'attr': {'class': 'line-item--price-single'}}) }}</td>
+                            <td>{{ form_row(form.items.vars.prototype.vatRate, {'attr': {'class': 'line-item--vat-rate'}}) }}</td>
                             <td class="text-right">
                                 <small>({% trans %}Net{% endtrans %})</small> <span class="line-item--total-net-price"></span><br>
                                 <small>({% trans %}Gross{% endtrans %})</small> <span class="line-item--total-gross-price"></span>
@@ -142,7 +142,7 @@
         </div>
     </div>
 
-    {% do form.lineItems.setRendered %}
+    {% do form.items.setRendered %}
     {{ form_end(form) }}
 </section>
 {% endblock %}
